After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777832 - qtmux: Timecode track fixes for STSD entry
qtmux: Timecode track fixes for STSD entry
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-27 14:17 UTC by Vivia Nikolaidou
Modified: 2017-01-27 15:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-qtmux-Timecode-track-fixes-for-STSD-entry.patch (2.44 KB, patch)
2017-01-27 14:18 UTC, Vivia Nikolaidou
committed Details | Review

Description Vivia Nikolaidou 2017-01-27 14:17:55 UTC
The n_frames field (frames per second) should follow the nominal frame
rate for drop-frame timecodes.

Also, the trak's timescale (and duration, accordingly) should follow the
STSD entry's timescale and frame duration (fps_n and fps_d accordingly),
not the other way around.
Comment 1 Vivia Nikolaidou 2017-01-27 14:18:58 UTC
Created attachment 344419 [details] [review]
0001-qtmux-Timecode-track-fixes-for-STSD-entry.patch
Comment 2 Sebastian Dröge (slomo) 2017-01-27 14:43:29 UTC
commit af47e93b97a3d33e6a6da6a2651269567cf8701d
Author: Vivia Nikolaidou <vivia@toolsonair.com>
Date:   Fri Jan 27 16:14:16 2017 +0200

    qtmux: Timecode track fixes for STSD entry
    
    The n_frames field (frames per second) should follow the nominal frame
    rate for drop-frame timecodes.
    
    Also, the trak's timescale (and duration, accordingly) should follow the
    STSD entry's timescale and frame duration (fps_n and fps_d accordingly),
    not the other way around.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=777832